--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ra-ts",
+    "name": "@bpwme/ra-ts",
     "license": "MIT",
     "type": "module",
     "version": "0.0.1",
@@ -18,13 +18,12 @@
     ],
     "scripts": {
         "dev": "vite build --watch",
-        "build": "tsc && vite build",
+        "build": "vite build && tsc --emitDeclarationOnly",
         "preview": "vite preview",
         "test": "vitest run",
         "test:watch": "vitest watch",
         "lint": "eslint .",
-        "lint:fix": "eslint . --fix",
-        "test:basic": "tsx test.ts"
+        "lint:fix": "eslint . --fix"
     },
     "devDependencies": {
         "@types/node": "^22.15.29",
