--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "ES2020",
         "lib": ["ES2020", "DOM"],
         "module": "ESNext",
-        "moduleResolution": "bundler",
+        "moduleResolution": "node",
         "resolveJsonModule": true,
         "strict": true,
         "declaration": true,
@@ -14,8 +14,9 @@
         "isolatedModules": true,
         "skipLibCheck": true,
         "types": ["vitest/globals"],
-        "noImplicitAny": false
+        "noImplicitAny": false,
+        "emitDeclarationOnly": false
     },
     "include": ["src/**/*"],
-    "exclude": ["node_modules", "dist"]
+    "exclude": ["node_modules", "dist", "tests", "**/*.spec.ts"]
 }
